update table block